--- a/index.html
+++ b/index.html
@@ -4,15 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <!-- google font - Montserrat   -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Karla:ital,wght@1,300&family=Montserrat:wght@200&family=Smooch+Sans&display=swap" rel="stylesheet">
+    <!-- linking css file -->
+      <link rel="stylesheet" href="./styles/style.css">
+    
     <title>Spotify Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+      <!-- ============= section 4 start =============-->
+   <div class="section-4">
+        <figure class="s4-icon"><img src="./images/spotify-icon-white.png" alt="spotify icon"></figure>
+      <div class="s4-box">
+        <div class="s4-header-hero"><h2>It’s as yeezy as Kanye West.</h2></div>
+        <article > 
+            <header><h3 class="s4-header">Search</h3></header>
+            <p class="s4-text"> Know what you want to listen to? <br> Just search and hit play.</p>
+        </article>
+        <article>
+          <header><h3 class="s4-header">Browse</h3></header>
+          <p class="s4-text"> Check out the latest charts,<br> brand new releases and great playlists for right now.</p>
+      </article>
+      <article>
+        <header><h3 class="s4-header">Discover</h3></header>
+        <p class="s4-text">Enjoy new music every Monday with your
+          own personal playlist. <br> Or sit back and enjoy Radio.</p>
+    </article>
+      </div>
+      <div class="s4-box">
+        <figure>
+          <img class="s4-app-img" src="./images/spotify-app.jpg" alt="spotify-app">
+        </figure>
+      </div>
+   </div>
+    <!-- ============= section 4 End =============-->
   </body>
 </html>
