--- a/index.html
+++ b/index.html
@@ -4,15 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="./styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
     <title>Spotify Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+
+
+    <div class="third-part">
+      <h1 class="berfin-header"><b>What's on Spotify?</b></h1>
+      <div class="berfin-columns">
+      <div class="berfin-box">
+        <img src="/Users/berfinkaraman/Development/code/phase-1/html-css-project-the-most-amazing-group/images/music-icon.png" alt="speaker" width="100"></img>
+        <h1><b>Millions of Songs</b></h1>
+        <p>There are millions of songs on Spotify</p>
+      </div>
+     <div class="berfin-box">
+        <img src="/Users/berfinkaraman/Development/code/phase-1/html-css-project-the-most-amazing-group/images/high-quality-icon.png" alt="sound waves" width="100"></img>
+       <h1><b>HD Music</b></h1>
+        <p>Listen to music if you were listening music live</p>
+
+      </div>
+      <div class="berfin-box">
+        <img src="/Users/berfinkaraman/Development/code/phase-1/html-css-project-the-most-amazing-group/images/devices-icon.png" alt="devices" width="100"></img>
+        <h1><b>Stream Everywhere</b></h1>
+        <p>Stream music on your smartphone, tablet or computer.</p>
+    </div></div>
   </body>
 </html>
