image path problem

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
       <h1 class="berfin-header"><b>What's on Spotify?</b></h1>
       <div class="berfin-columns">
       <div class="berfin-box">
-        <img src="/Users/berfinkaraman/Development/code/phase-1/html-css-project-the-most-amazing-group/images/music-icon.png" alt="speaker" width="100"></img>
+        <img src="./images/music-icon.png" alt="speaker" width="100"></img>
         <h1><b>Millions of Songs</b></h1>
         <p>There are millions of songs on Spotify</p>
       </div>
      <div class="berfin-box">
-        <img src="/Users/berfinkaraman/Development/code/phase-1/html-css-project-the-most-amazing-group/images/high-quality-icon.png" alt="sound waves" width="100"></img>
+        <img src="./images/high-quality-icon.png" alt="sound waves" width="100"></img>
        <h1><b>HD Music</b></h1>
         <p>Listen to music if you were listening music live</p>
 
       </div>
       <div class="berfin-box">
-        <img src="/Users/berfinkaraman/Development/code/phase-1/html-css-project-the-most-amazing-group/images/devices-icon.png" alt="devices" width="100"></img>
+        <img src="./images/devices-icon.png" alt="devices" width="100"></img>
         <h1><b>Stream Everywhere</b></h1>
         <p>Stream music on your smartphone, tablet or computer.</p>
     </div></div>
